# completion_forms

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  template_form.py
completion_forms/: __init__.py  client.py  exceptions.py  form.py  request.py
tests/: test_client.py  test_form.py  test_integration.py
tests/test_forms/: basic_form.json  nested_form.json  nested_test_form.json  test_form.json  text_form.json
